# zed-aws-toolkit

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
sidecar/: Cargo.toml
sidecar/src/: main.rs
sidecar/src/auth/: cache.rs  config.rs  login.rs  mod.rs  state.rs
sidecar/src/mcp/: dispatcher.rs  mod.rs  tools_manifest.rs  types.rs
sidecar/src/services/: cloudwatch.rs  ecr.rs  ecs.rs  lambda.rs  mod.rs  s3.rs
sidecar/src/tools/: auth.rs  cloudwatch.rs  ecr.rs  ecs.rs  lambda.rs  mod.rs  s3.rs
