[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zed-aws-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-lambda = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ecs = "1"
aws-sdk-ecr = "1"
aws-sdk-sso = "1"
aws-sdk-ssooidc = "1"
dirs = "5"
open = "5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
